src/objects/SBCO_Future_Price__c.object
<CustomObject>
    <description>A record of Future Price Guarantees that have been approved for the account.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Future Price Guarantees</relationshipLabel>
        <relationshipName>Future_Price_Guarantees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <description>The percentage discount offered on the product.</description>
        <inlineHelpText>The percentage discount offered on the product.</inlineHelpText>
        <label>Discount %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expires_On__c</fullName>
        <formula>CreatedDate+(365*(Term__c/12))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expires On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <inlineHelpText>Use this picklist if you would like to apply a discount to an entire product family.</inlineHelpText>
        <label>Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>Mobility</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>License</fullName>
                    <isActive>false</isActive>
                    <label>License</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Documents__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Documents</label>
        <referenceTo>Legal_Documents__c</referenceTo>
        <relationshipLabel>Future Price Guarantees</relationshipLabel>
        <relationshipName>Future_Price_Guarantees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>A field for notes for complex guarantees.</description>
        <inlineHelpText>Use this field to describe a complex guarantee.</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_SKU__c</fullName>
        <formula>SBCF_ProductLookup__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product SKU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>The product or products on which the discount is being offered.</description>
        <inlineHelpText>The product or products on which the discount is being offered.</inlineHelpText>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Future Price Guarantees</relationshipLabel>
        <relationshipName>Future_Price_Guarantees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBCF_Parent_Approved__c</fullName>
        <formula>IF((TEXT(Quote__r.SBCF_Approval_Status__c) = &quot;Agreement Executed&quot;) || (TEXT( Legal_Documents__r.Status__c) = &quot;Agreement Executed&quot;) , TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Approved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBCF_ProductLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Future Price Guarantees</relationshipLabel>
        <relationshipName>Future_Price_Guarantees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBCF_Quote_Approved__c</fullName>
        <formula>IF(ISPICKVAL(Quote__r.SBCF_Approval_Status__c,&quot;Agreement Executed&quot;) || ISPICKVAL(Quote__r.SBCF_Approval_Status__c,&quot;Quote Approved, Awaiting Customer Review&quot;) || ISPICKVAL(Quote__r.SBCF_Approval_Status__c,&quot;Customer Approved, Pending Signature&quot;),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Approved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <description>The number of months the FPG is valid for.</description>
        <inlineHelpText>The number of months the FPQ is valid for.</inlineHelpText>
        <label>Term (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Future Price Guarantee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FPG-{00000}</displayFormat>
        <label>Future Price Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Future Price Guarantees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>